[tool.poetry]
name = "gpsoauth"
version = "0.4.4"
description = "A python client library for Google Play Services OAuth."
authors = ["Simon Weber <simon@simonmweber.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
readme = "README.md"
homepage = "https://github.com/simon-weber/gpsoauth"
repository = "https://github.com/simon-weber/gpsoauth"

[tool.poetry.dependencies]
python = "^3.6.1"
pycryptodomex = "^3.10.1"
requests = "^2.25.1"
importlib-metadata = "^3.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"
isort = "^5.8.0"
pytest = "^6.2.2"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.1"
flake8-comprehensions = "^3.4.0"
flake8-use-fstring = "^1.1"
flake8-simplify = "^0.14.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[tool.pylint.master]
extension-pkg-whitelist = [
    "binascii",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
]
