[tool.poetry]
name = "gpsoauth"
version = "1.1.1"
description = "A python client library for Google Play Services OAuth."
authors = ["Simon Weber <simon@simonmweber.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
readme = "README.md"
homepage = "https://github.com/simon-weber/gpsoauth"
repository = "https://github.com/simon-weber/gpsoauth"
include = ["gpsoauth/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodomex = ">= 3.0"
requests = ">= 2.0.0"
urllib3 = "<2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^22.3.0"
isort = "^5.8.0"
pytest = "^6.2.2"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.1"
flake8-comprehensions = "^3.4.0"
flake8-use-fstring = "^1.1"
flake8-simplify = "^0.14.0"
pylint = "^2.7.4"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[tool.pylint.master]
extension-pkg-whitelist = [
    "binascii",
    "_ssl",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
# Reasons disabled:
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
]
